fix: use overflow auto instead of scroll for code blocks

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -296,7 +296,7 @@ pre {
     padding: 1em;
     background-color: var(--color-code-bg);
     max-width: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 p code,
